# telegram-clicker-example

./: .coveragerc  .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.build.yml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  docx.md  models.py  pyproject.toml  setup.cfg
config/: .env.template
docker/: ci.sh
docker/django/: .bashrc  Dockerfile  entrypoint.sh
docker/django/scripts/: provision  start-web-server
docker/nginx/: nginx.conf
docker/nginx/conf.d/: default.conf
docs/: Makefile  conf.py  index.rst
docs/pages/template/: packaging.rst  start-with-app.rst  troubleshooting.rst
server/: celery.py  urls.py
server/apps/bot/: apps.py
server/apps/bot/management/commands/: run_telegram_bot.py
server/apps/bot/services/: bot.py
server/apps/game/: admin.py  apps.py
server/apps/game/api/: routers.py
server/apps/game/api/serializers/: income_item.py  promo.py
server/apps/game/api/views/: income_item.py  promo.py
server/apps/game/migrations/: 0001_initial.py  0002_initial.py
server/apps/game/models/: __init__.py  income_item.py  promo.py
server/apps/game/services/: errors.py  income_item.py  promo.py
server/apps/game/services/api/: user.py
server/apps/services/: authentication_backend.py  base_model.py  content_type_id.py  enums.py  exception.py  filters_mixins.py  serializers.py  validators.py  views.py
server/apps/services/custom_router/: api_router.py  nested_router.py
server/apps/services/parsing/: alterainvest.py  okved.py  torgi_gov.py
server/apps/services/parsing/investmoscow/: base.py  investment_object.py  problem_report.py  service_support.py
server/apps/services/parsing/xlsx/: base.py  real_estate.py  service_support.py  specialized_site.py
server/apps/user/: admin.py  apps.py
server/apps/user/api/: routers.py
server/apps/user/api/serializers/: __init__.py  login.py  user.py
server/apps/user/api/views/: __init__.py  user.py
server/apps/user/migrations/: 0001_initial.py  0002_alter_user_balance.py
server/apps/user/models/: __init__.py  user.py
server/apps/user/permissions/: __init__.py  user.py
server/apps/user/services/: check_user.py  user.py
server/settings/: __init__.py
server/settings/components/: caches.py  celery.py  common.py  cors.py  email.py  investment_object.py  llm.py  logging.py  sentry.py
server/settings/environments/: development.py  production.py
server/templates/email/: confirm_email.html  reset_password.html
server/templates/selection_request/: invest.docx
server/templates/txt/: humans.txt
server/url_components/: __init__.py  admin.py  docs.py  errors.py  jwt.py  seo.py
tests/: conftest.py
tests/test_apps/: conftest.py
tests/test_apps/test_game/: test_income_item_service.py  test_promo_service.py
tests/test_apps/test_game/test_api/: test_income_item.py  test_promo.py
tests/test_apps/test_user/: test_user_service.py
tests/test_server/: test_urls.py
